[package]
name = "rusty-vban"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
num-traits = "0.2.14"
num-derive = "0.3.3"
anyhow = "1.0.69"
cpal = "0.15.0"
dasp_sample = "0.11.0"
ringbuf = "0.3.2"
derive_builder = "0.12.0"

[dev-dependencies]
local-ip-address = "0.5.1"
