[package]
name = "rusty-vban"
version = "0.6.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "VBAN API implementation in Rust"
documentation = "https://docs.rs/rusty-vban"
repository = "https://github.com/maunolo/rusty-vban"
readme = "README.md"
keywords = ["vban", "audio", "streaming"]
categories = ["multimedia::audio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
num-traits = "0.2.14"
num-derive = "0.3.3"
anyhow = "1.0.69"
dasp_sample = "0.11.0"
ringbuf = "0.3.2"

[dependencies.cpal]
version = "0.15.0"

[target.'cfg(target_os = "linux")'.dependencies.cpal]
version = "0.15.0"
features = ["jack"]

[dev-dependencies]
local-ip-address = "0.5.1"
